Set device to cpu if needed

--- a/cat_breed_classifier/cat-breed-classifier.ipynb
+++ b/cat_breed_classifier/cat-breed-classifier.ipynb
@@ -63,6 +63,8 @@
    "outputs": [],
    "source": [
     "# Load model\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
     "model = models.resnet50(pretrained=False)\n",
     "\n",
     "# Adjust the final layer to match modified model from training\n",
@@ -71,7 +73,7 @@
     "model.fc = nn.Linear(num_ftrs, num_classes)\n",
     "\n",
     "# Load the weights\n",
-    "model.load_state_dict(torch.load('cat_breed_classifier_32_300_0.180.pth'))\n",
+    "model.load_state_dict(torch.load('cat_breed_classifier_32_300_0.180.pth'), map_location=device)\n",
     "\n",
     "model.eval();"
    ]
