--- a/cat_breed_classifier/cat-breed-classifier.ipynb
+++ b/cat_breed_classifier/cat-breed-classifier.ipynb
@@ -73,7 +73,7 @@
     "model.fc = nn.Linear(num_ftrs, num_classes)\n",
     "\n",
     "# Load the weights\n",
-    "model.load_state_dict(torch.load('cat_breed_classifier_32_300_0.180.pth'), map_location=device)\n",
+    "model.load_state_dict(torch.load('cat_breed_classifier_32_300_0.180.pth', map_location=device))\n",
     "\n",
     "model.eval();"
    ]
